apps/gatus/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus
  namespace: gatus
  labels:
    app: gatus
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gatus
  template:
    metadata:
      labels:
        app: gatus
    spec:
      serviceAccountName: gatus
      containers:
        - name: gatus
          image: twinproduction/gatus:v5.16.0
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config/config.yaml
              subPath: config.yaml
              readOnly: true
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 192Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: config
          configMap:
            name: gatus-config
        - name: data
          persistentVolumeClaim:
            claimName: gatus-data
