apps/gatus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: gatus
spec:
  type: ClusterIP
  selector:
    app: gatus
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
